2nd tab: Added the beaker and thermometer to the beaker heater.
2nd tab: Replaced heater element image with darker version.
2nd tab: Made the space around the sun be pre-populated with energy chunks when it is swapped in.
2nd tab: Made the water emerging from the faucet look more realistic.
# 0.00.24 (69581) Oct 26, 2012
10/26/12 Publishing to dev for review
2nd tab: Integrated an image of the biker looking tired that replaces the main body when the biker runs out of food.
2nd tab: Fixed an issue where energy chunks weren't being fully cleared when tea pot was swapped out.
2nd tab: Fixed an issue where energy chunks weren't being fully cleared when biker was swapped out.
2nd tab: Fixed an issue where the biker used all energy instantly when pedaling.
# 0.00.23 (69513) Oct 25, 2012
10/25/12 Deploying to dev for review.
2nd tab: Made the biker not emit energy chunks if the mechanically powered generator is not in place.
2nd tab: Added tick marks to the cloud control slider.
Removed the 3rd tab for now, since it is planned to publish this initially without it.
2nd tab: Made slowdown of biker longer so that energy chunks can get into the generator before bike's wheel stops moving.
2nd tab: Moved the "Feed Me" button above the biker, moved the speed control slider a bit closer under the biker.
2nd tab: Made the biker always be poised to move (i.e. animate) right away after stopping.
2nd tab: Made improvements to the path followed by the energy chunks for the biker.
2nd tab: Made the biker run out of energy after a while.
# 0.00.22 (69285) Oct 17, 2012
10/17/12 Deploying to dev for review.
2nd tab: Made the biker run out of energy after a while.
2nd tab: Made the fluorescent bulb be transparent when energy chunks are visible.
2nd tab: Made the tea pot be transparent when energy chunks are visible.
2nd tab: Removed texture node from generator wheel.
2nd tab: Added spokes for use in direct-coupling mode (i.e. when biker is connected) for the generator.