@@ -1,3 +1,4 @@
+2nd tab: Made energy chunks appear in the beaker on the burner.
 2nd tab: Added the beaker and thermometer to the beaker heater.
 2nd tab: Replaced heater element image with darker version.
 2nd tab: Made the space around the sun be pre-populated with energy chunks when it is swapped in.
